feat: Implementado endpoint de delete de user, teste unitario e documentação.
